# cloud-companion

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: dependencies.py  main.py
app/api/: deps.py  health.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  chat.py  resources.py
app/cli/: api_key.py  cloud_account.py  main.py  migrate.py  organization.py  utils.py
app/core/: application.py  config.py  constants.py  exceptions.py  logging.py  migrate.py  security.py
app/core/migrations/: 001_initial_constrains.cypher  002_api_key_hash_index.cypher  003_graph_constraints.cypher
app/middleware/: error_handler.py  logging.py
app/models/: graph.py  neo4j_models.py  schema.py  schemas.py
app/services/: chat.py  llm.py  neo4j.py  weaviate.py
app/services/crawler/: __init__.py  aws.py  azure.py  base.py  gcp.py
app/services/repositories/: api_key.py  cloud_account.py  organization.py  resource.py
docs/: api.md  architecture.md
docs/deployment/: deployment.md
tests/: conftest.py  test_health.py
